Cleaned things up

--- a/popup.html
+++ b/popup.html
@@ -23,8 +23,11 @@
   <body>
     <div style="width:300px">
     <h1>Source Formatter</h1>
-    <p>This extension reformats the Seattle Public Schools Website "The Source." If you encounter an issue contact me at 
-      <a href="mailto:alex.maclean2000">alex.maclean2000@gmail.com</a>
+    <p>
+      This extension reformats the Seattle Schools website "The Source" (
+      <a target="_blank" href="https://ps.seattleschools.org/public/">https://ps.seattleschools.org/public/</a>    
+      ). It's completely unofficial so don't contact Seattle Schools if something is broken, instead email me at 
+      <a target="_blank" href="mailto:alex.maclean2000">alex.maclean2000@gmail.com</a>
     </p>
     </div>
   </body>
